[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_suggs"
version = "0.0.1"
authors = [
    { name = "Peter Suggitt", email = "me@suggs.org.uk" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/suggitpe/python-sandbox"
Issues = "https://github.com/suggitpe/python-sandbox/issues"